# aergia-infinity

./: 01_hello_universe.ae  02_galaxy_survey.ae  03_gravitational_waves.ae  04_symbolic_compression.ae  05_realtime_pipeline.py  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  __main__.py  ast_nodes.py  demo.py  evaluator.py  lexer.py  novel_syntax.py  parser.py  pyproject.toml  repl.py  setup.cfg  sources.py  stdlib.py  stream.py  stream_ops.py  symbolic.py  test_all.py  thunk.py
